--- a/package.json
+++ b/package.json
@@ -74,5 +74,6 @@
     "url": "https://github.com/danzoboyo10/Express-lab-2/issues"
   },
   "homepage": "https://github.com/danzoboyo10/Express-lab-2#readme",
+  "devDependencies": {},
   "description": ""
 }
